step_2: add fonts, image; edited gulpfile.js; configured browser synk from virtual server;

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forkio</title>
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+<!--Header-->
 
+<section class=“header”>
+  <!--todo-->
+</section>
+
+<!--Fork app-->
+
+<section class=“fork-app”>
+<!--todo-->
+</section>
+
+<!--Revolution editor-->
+
+<section class=“revo-edit”>
+<!--todo-->
+</section>
+
+<!--Solution-->
+
+<section class=“solution”>
+<!--todo-->
+</section>
+
+<!--Social-->
+
+<section class=“social”>
+<!--todo-->
+</section>
+
+<!--Partners-->
+
+<section class=“partners”>
+<!--todo-->
+</section>
+
+<!--Pricing-->
+
+<section class=“pricing”>
+<!--todo-->
+</section>
+
+<!--Callback-->
+
+<section class=“callback”>
+<!--todo-->
+</section>
+
+<!--Footer-->
+
+<footer class=“footer”>
+<!--todo-->
+</footer>
+
+<script src="js/main.min.js"></script>
 </body>
 </html>
