fixed some bug: in gulpfile from photo minify; added _solution.scss, _solution-media.scss; edited section 'solution' in index.html;

--- a/src/index.html
+++ b/src/index.html
@@ -4,62 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forkio</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 <!--Header-->
 
-<section class=“header”>
-  <div class="div"></div>
-  <!--todo-->
+<section class='header'>
+    <!--todo-->
 </section>
 
 <!--Fork app-->
 
-<section class=“fork-app”>
-<!--todo-->
+<section class='fork-app'>
+    <!--todo-->
 </section>
 
 <!--Revolution editor-->
 
-<section class=“revo-edit”>
-<!--todo-->
+<section class='revo-edit'>
+    <!--todo-->
 </section>
 
 <!--Solution-->
 
-<section class=“solution”>
-<!--todo-->
+<section class='solution'>
+    <div class="solution__title">
+        <i class="fas fa-angle-left solution__title-left"></i>
+        Here is what you get
+        <i class="fas fa-angle-right solution__title-right"></i>
+    </div>
+    <div class="solution__description">
+        <div class="solution__description-block">
+            <div class="solution__description-block-image">
+                <img class="solution__description-block-image-item" src="images/icon.png" alt="desc">
+            </div>
+            <div class="solution__description-block-main">
+                <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
+                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
+                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
+                    and
+                    expound the actual teachings of the great explorer of the truth, the master-builder of human
+                    happiness.</p>
+            </div>
+        </div>
+        <div class="solution__description-block">
+            <div class="solution__description-block-image">
+                <img class="solution__description-block-image-item" src="images/icon-1.png" alt="desc">
+            </div>
+            <div class="solution__description-block-main">
+                <h2 class="solution__description-block-main-title">Incredibly Powerful Tool</h2>
+                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
+                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
+                    and
+                    expound the actual teachings of the great explorer of the truth, the master-builder of human
+                    happiness.</p>
+            </div>
+        </div>
+        <div class="solution__description-block">
+            <div class="solution__description-block-image">
+                <img class="solution__description-block-image-item" src="images/icon-2.png" alt="desc">
+            </div>
+            <div class="solution__description-block-main">
+                <h2 class="solution__description-block-main-title">Experimental Stuff</h2>
+                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
+                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
+                    and
+                    expound the actual teachings of the great explorer of the truth, the master-builder of human
+                    happiness.</p>
+            </div>
+        </div>
+        <div class="solution__description-block">
+            <div class="solution__description-block-image">
+                <img class="solution__description-block-image-item" src="images/icon-3.png" alt="desc">
+            </div>
+            <div class="solution__description-block-main">
+                <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
+                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
+                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
+                    and
+                    expound the actual teachings of the great explorer of the truth, the master-builder of human
+                    happiness.</p>
+            </div>
+        </div>
+    </div>
+    <div class="solution__editor"></div>
+    <!--todo-->
 </section>
 
 <!--Social-->
 
-<section class=“social”>
-<!--todo-->
+<section class='social'>
+    <!--todo-->
 </section>
 
 <!--Partners-->
 
-<section class=“partners”>
-<!--todo-->
+<section class='partners'>
+    <!--todo-->
 </section>
 
 <!--Pricing-->
 
-<section class=“pricing”>
-<!--todo-->
+<section class='pricing'>
+    <!--todo-->
 </section>
 
 <!--Callback-->
 
-<section class=“callback”>
-<!--todo-->
+<section class='callback'>
+    <!--todo-->
 </section>
 
 <!--Footer-->
 
-<footer class=“footer”>
-<!--todo-->
+<footer class='footer'>
+    <!--todo-->
 </footer>
 
 <script src="js/main.min.js"></script>
