--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,41 @@
 <!--Footer-->
 
 <footer class='footer'>
-    <!--todo-->
+    <div class="footer__container">
+        <div class="footer__container_logo">
+            <div class="footer__container_logo-block">
+                <div class="footer__container_logo-block-img"></div>
+                <h2 class="footer__container_logo-block-title">fork<span>io</span></h2>
+            </div>
+            <p class="footer__container_logo-info">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no quo.</p>
+        </div>
+        <div class="footer__container_menu-nav">
+            <h4 class="footer__container_menu-nav__title">Navigation</h4>
+            <ul class="footer__container_menu-nav_bar">
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Home</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Overview</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">About</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Buying Options</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Support</a></li>
+            </ul>
+        </div>
+        <div class="footer__container__requisites">
+            <div class="footer__container__requisites-phone">
+                <a href="tel: +3475677890" class="footer__container__requisites-phone-link">347 567 78 90</a>
+                <p class="footer__container__requisites-phone-info">AVAILABLE AT 12PM - 18PM</p>
+            </div>
+            <div class="footer__container__requisites-location">
+                <h4 class="footer__container__requisites-location-city">New York, NY</h4>
+                <span class="footer__container__requisites-location-address">560 Judah St & 15th Ave, Apt 5</span>
+                <span class="footer__container__requisites-location-address">San Francisco, CA, 230903</span>
+            </div>
+        </div>
+        <div class="footer__container__info">
+            <h4 class="footer__container__info-title">Info</h4>
+            <p class="footer__container__info-text">Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+                lobortis nisl ut aliquip ex commodo consequat. Autem vel hendrerit iriure dolor in hendrerit.</p>
+        </div>
+    </div>
 </footer>
 
 <script src="js/main.min.js"></script>
