added section callback, social edited section solution, footer added some photo

--- a/src/index.html
+++ b/src/index.html
@@ -30,73 +30,125 @@
 <!--Solution-->
 
 <section class='solution'>
-    <div class="solution__title">
-        <i class="fas fa-angle-left solution__title-left"></i>
-        Here is what you get
-        <i class="fas fa-angle-right solution__title-right"></i>
+    <div class="container">
+        <div class="solution__title">
+            <i class="fas fa-angle-left solution__title-left"></i>
+            Here is what you get
+            <i class="fas fa-angle-right solution__title-right"></i>
+        </div>
+        <div class="solution__description">
+            <div class="solution__description-block">
+                <div class="solution__description-block-image">
+                    <img class="solution__description-block-image-item" src="images/icon.png" alt="desc">
+                </div>
+                <div class="solution__description-block-main">
+                    <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
+                    <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
+                        idea of
+                        denouncing pleasure and praising pain was born and I will give you a complete account of the
+                        system,
+                        and
+                        expound the actual teachings of the great explorer of the truth, the master-builder of human
+                        happiness.</p>
+                </div>
+            </div>
+            <div class="solution__description-block">
+                <div class="solution__description-block-image">
+                    <img class="solution__description-block-image-item" src="images/icon-1.png" alt="desc">
+                </div>
+                <div class="solution__description-block-main">
+                    <h2 class="solution__description-block-main-title">Incredibly Powerful Tool</h2>
+                    <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
+                        idea of
+                        denouncing pleasure and praising pain was born and I will give you a complete account of the
+                        system,
+                        and
+                        expound the actual teachings of the great explorer of the truth, the master-builder of human
+                        happiness.</p>
+                </div>
+            </div>
+            <div class="solution__description-block">
+                <div class="solution__description-block-image">
+                    <img class="solution__description-block-image-item" src="images/icon-2.png" alt="desc">
+                </div>
+                <div class="solution__description-block-main">
+                    <h2 class="solution__description-block-main-title">Experimental Stuff</h2>
+                    <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
+                        idea of
+                        denouncing pleasure and praising pain was born and I will give you a complete account of the
+                        system,
+                        and
+                        expound the actual teachings of the great explorer of the truth, the master-builder of human
+                        happiness.</p>
+                </div>
+            </div>
+            <div class="solution__description-block">
+                <div class="solution__description-block-image">
+                    <img class="solution__description-block-image-item" src="images/icon-3.png" alt="desc">
+                </div>
+                <div class="solution__description-block-main">
+                    <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
+                    <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
+                        idea of
+                        denouncing pleasure and praising pain was born and I will give you a complete account of the
+                        system,
+                        and
+                        expound the actual teachings of the great explorer of the truth, the master-builder of human
+                        happiness.</p>
+                </div>
+            </div>
+        </div>
+        <div class="solution__editor"></div>
     </div>
-    <div class="solution__description">
-        <div class="solution__description-block">
-            <div class="solution__description-block-image">
-                <img class="solution__description-block-image-item" src="images/icon.png" alt="desc">
-            </div>
-            <div class="solution__description-block-main">
-                <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
-                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
-                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
-                    and
-                    expound the actual teachings of the great explorer of the truth, the master-builder of human
-                    happiness.</p>
-            </div>
-        </div>
-        <div class="solution__description-block">
-            <div class="solution__description-block-image">
-                <img class="solution__description-block-image-item" src="images/icon-1.png" alt="desc">
-            </div>
-            <div class="solution__description-block-main">
-                <h2 class="solution__description-block-main-title">Incredibly Powerful Tool</h2>
-                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
-                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
-                    and
-                    expound the actual teachings of the great explorer of the truth, the master-builder of human
-                    happiness.</p>
-            </div>
-        </div>
-        <div class="solution__description-block">
-            <div class="solution__description-block-image">
-                <img class="solution__description-block-image-item" src="images/icon-2.png" alt="desc">
-            </div>
-            <div class="solution__description-block-main">
-                <h2 class="solution__description-block-main-title">Experimental Stuff</h2>
-                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
-                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
-                    and
-                    expound the actual teachings of the great explorer of the truth, the master-builder of human
-                    happiness.</p>
-            </div>
-        </div>
-        <div class="solution__description-block">
-            <div class="solution__description-block-image">
-                <img class="solution__description-block-image-item" src="images/icon-3.png" alt="desc">
-            </div>
-            <div class="solution__description-block-main">
-                <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
-                <p class="solution__description-block-main-text">But I must explain to you how all this mistaken idea of
-                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
-                    and
-                    expound the actual teachings of the great explorer of the truth, the master-builder of human
-                    happiness.</p>
-            </div>
-        </div>
-    </div>
-    <div class="solution__editor"></div>
     <!--todo-->
 </section>
 
 <!--Social-->
 
 <section class='social'>
-    <!--todo-->
+    <div class="social__container">
+        <div class="social__slick">
+            <button class="social__slick-left">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="social__slick-block">
+                <div class="social__slick-person">
+                    <div class="social__slick-person__block">
+                        <img src="images/Grand-Jedi.jpg" alt="grand_jedi" class="social__slick-person__block-img">
+                    </div>
+                    <div class="social__slick-person__info">
+                        <h5 class="social__slick-person__name">Master Joda</h5>
+                        <span class="social__slick-person__nick">@grandJedi</span>
+                    </div>
+                </div>
+                <div class="social__slick__info">
+                    <p class="social__slick__info-feedback"><span class="social__slick__info-name">@skyWalker </span>When
+                        you look at the dark side, careful you must be, for the dark side looks back.</p>
+                    <span class="social__slick__info-last-feedback">
+                        200000 years ago
+                    </span>
+                </div>
+            </div>
+            <button class="social__slick-right">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </div>
+        <div class="social__info">
+            <div class="social__info-git">
+                <a href="https://gitlab.com/TarasBurdeniuk/step2_forkio?nav_source=navbar" target="_blank" class="social__info-git__link"><i class="fab fa-github social__info-git-logo"></i>GitHub</a>
+                <span class="social__info-git__foll">7 352 Followers</span>
+            </div>
+            <div class="social__info-twitter">
+                <a href="https://twitter.com/jack?lang=uk" class="social__info-twitter__link" target="_blank"><i class="fab fa-twitter social__info-twitter-logo"></i>Twitter</a>
+                <span class="social__info-twitter__foll">136 312 Followers</span>
+            </div>
+            <div class="social__info-facebook">
+                <a href="https://www.facebook.com/zuck" class="social__info-facebook__link" target="_blank"><i
+                        class="fab fa-facebook-f social__info-facebook-logo"></i>Facebook</a>
+                <span class="social__info-facebook__foll">218 092 Subscribers</span>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!--Partners-->
@@ -114,7 +166,18 @@
 <!--Callback-->
 
 <section class='callback'>
-    <!--todo-->
+    <div class="callback__container">
+        <h2 class="callback-title">Subscribe To Stay In Touch</h2>
+        <form action="mailto:zinovijoprisko@gmail.com" enctype="text/plain" class="callback__block-form">
+            <div class="callback__form">
+                <input type="text" placeholder="Your name" required class="callback__form-name">
+                <input type="number" placeholder="Phone" required class="callback__form-phone">
+            </div>
+            <button class="callback__form-btn" type="submit">
+                subscribe
+            </button>
+        </form>
+    </div>
 </section>
 
 <!--Footer-->
@@ -126,16 +189,22 @@
                 <div class="footer__container_logo-block-img"></div>
                 <h2 class="footer__container_logo-block-title">fork<span>io</span></h2>
             </div>
-            <p class="footer__container_logo-info">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no quo.</p>
+            <p class="footer__container_logo-info">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no
+                quo.</p>
         </div>
         <div class="footer__container_menu-nav">
             <h4 class="footer__container_menu-nav__title">Navigation</h4>
             <ul class="footer__container_menu-nav_bar">
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Home</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Overview</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">About</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Buying Options</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item" href="#">Support</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
+                                                                   href="#">Home</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
+                                                                   href="#">Overview</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
+                                                                   href="#">About</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
+                                                                   href="#">Buying Options</a></li>
+                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
+                                                                   href="#">Support</a></li>
             </ul>
         </div>
         <div class="footer__container__requisites">
@@ -151,7 +220,8 @@
         </div>
         <div class="footer__container__info">
             <h4 class="footer__container__info-title">Info</h4>
-            <p class="footer__container__info-text">Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+            <p class="footer__container__info-text">Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+                suscipit
                 lobortis nisl ut aliquip ex commodo consequat. Autem vel hendrerit iriure dolor in hendrerit.</p>
         </div>
     </div>
