edited gitignore, index.html; added slick.js

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 <!--Solution-->
 
 <section class='solution'>
-    <div class="container">
+    <div class="solution__container">
         <div class="solution__title">
             <i class="fas fa-angle-left solution__title-left"></i>
             Here is what you get
@@ -111,22 +111,24 @@
             <button class="social__slick-left">
                 <i class="fas fa-chevron-left"></i>
             </button>
-            <div class="social__slick-block">
-                <div class="social__slick-person">
-                    <div class="social__slick-person__block">
-                        <img src="images/Grand-Jedi.jpg" alt="grand_jedi" class="social__slick-person__block-img">
+            <div class="social__slick-block-person">
+                <div class="social__slick-block">
+                    <div class="social__slick-person">
+                        <div class="social__slick-person__block">
+                            <img src="images/Grand-Jedi.jpg" alt="grand_jedi" class="social__slick-person__block-img">
+                        </div>
+                        <div class="social__slick-person__info">
+                            <h5 class="social__slick-person__name">Master Joda</h5>
+                            <span class="social__slick-person__nick">@grandJedi</span>
+                        </div>
                     </div>
-                    <div class="social__slick-person__info">
-                        <h5 class="social__slick-person__name">Master Joda</h5>
-                        <span class="social__slick-person__nick">@grandJedi</span>
-                    </div>
-                </div>
-                <div class="social__slick__info">
-                    <p class="social__slick__info-feedback"><span class="social__slick__info-name">@skyWalker </span>When
-                        you look at the dark side, careful you must be, for the dark side looks back.</p>
-                    <span class="social__slick__info-last-feedback">
+                    <div class="social__slick__info">
+                        <p class="social__slick__info-feedback"><span class="social__slick__info-name">@skyWalker </span>When
+                            you look at the dark side, careful you must be, for the dark side looks back.</p>
+                        <span class="social__slick__info-last-feedback">
                         200000 years ago
                     </span>
+                    </div>
                 </div>
             </div>
             <button class="social__slick-right">
