Edited index.html, style.scss

--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,39 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-<!--Header-->
-
-<section class='header'>
-    <!--todo-->
-</section>
-
-<!--Fork app-->
-
-<section class='fork-app'>
-    <!--todo-->
-</section>
+    <header class='header'>
+        <div class="container container--header">
+            <div class="header__logo">
+                <div class="header__logo-img"></div>
+                <div class="header__logo-text">ForkIO</div>
+            </div>
+            <div class="header__right-block">
+                <ul class="header-nav">
+                    <li class="header-nav__item">
+                        <a href="#" class="header-nav__link">Overview</a>
+                    </li>
+                    <li class="header-nav__item">    
+                        <a href="#" class="header-nav__link">About Fork</a>
+                    </li>
+                    <li class="header-nav__item">    
+                        <a href="#" class="header-nav__link">Buying Options</a>
+                    </li>
+                    <li class="header-nav__item">
+                        <a href="#" class="header-nav__link">Support</a>
+                    </li>
+                </ul>
+                <a href="#" class="btn btn--medium">Buy Now</a>
+            </div>        
+        </div>    
+    </header>    
+     <section  class="company">
+        <div class="container container--company">
+           <h1 class="company__title">Fork App</h1>
+            <h2 class="company__slogan">A real gamechanger in the world of web development</h2>
+            <p class="company__description">v. 2.8 For Mac and Windows</p>
+            <a href="#" class="btn btn--large">Download For Free Now</a>
+        </div>
+    </section > 
 
 <!--Revolution editor-->
 
