Edited index.html, header.scss, company.scss

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
                 <div class="header__logo-text">ForkIO</div>
             </div>
             <div class="header__right-block">
+                <a href="#" class="btn btn--medium">Buy Now</a>
+
                 <ul class="header-nav">
                     <li class="header-nav__item">
                         <a href="#" class="header-nav__link">Overview</a>
@@ -30,16 +32,19 @@
                         <a href="#" class="header-nav__link">Support</a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn--medium">Buy Now</a>
             </div>        
         </div>    
     </header>    
      <section  class="company">
         <div class="container container--company">
            <h1 class="company__title">Fork App</h1>
-            <h2 class="company__slogan">A real gamechanger in the world of web development</h2>
+            <p class="company__slogan">A real gamechanger in the world of web development</p>
             <p class="company__description">v. 2.8 For Mac and Windows</p>
-            <a href="#" class="btn btn--large">Download For Free Now</a>
+            <div class="block-proposition">
+                <a href="#" class="btn btn--large">Download For Free Now</a>
+                <p class="company__proposition">Unlimited 30-Days Trial Period</p>
+            </div>
+            
         </div>
     </section > 
 
