--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,24 @@
                 <div class="header__logo-img"></div>
                 <div class="header__logo-text">ForkIO</div>
             </div>
-            <div class="header__right-block">
-                <a href="#" class="btn btn--medium">Buy Now</a>
+            <a href="#" class="btn btn--medium">Buy Now</a>
 
-                <ul class="header-nav">
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Overview</a>
-                    </li>
-                    <li class="header-nav__item">    
-                        <a href="#" class="header-nav__link">About Fork</a>
-                    </li>
-                    <li class="header-nav__item">    
-                        <a href="#" class="header-nav__link">Buying Options</a>
-                    </li>
-                    <li class="header-nav__item">
-                        <a href="#" class="header-nav__link">Support</a>
-                    </li>
-                </ul>
-            </div>        
+            <a href="#" class="header__menu-icon"></a>
+
+            <ul class="header-menu">
+                <li class="header-menu__item">
+                    <a href="#" class="header-menu__link">Overview</a>
+                </li>
+                <li class="header-menu__item">    
+                    <a href="#" class="header-menu__link">About Fork</a>
+                </li>
+                <li class="header-menu__item">    
+                    <a href="#" class="header-menu__link">Buying Options</a>
+                </li>
+                <li class="header-menu__item">
+                    <a href="#" class="header-menu__link">Support</a>
+                </li>
+            </ul>
         </div>    
     </header>    
      <section  class="company">
@@ -43,16 +43,21 @@
             <div class="block-proposition">
                 <a href="#" class="btn btn--large">Download For Free Now</a>
                 <p class="company__proposition">Unlimited 30-Days Trial Period</p>
-            </div>
-            
+            </div>            
         </div>
     </section > 
 
 <!--Revolution editor-->
+    <section class='editor'>
+        <div class="container container--editor">
+            <h1 class="editor__title">Revolutionary editor</h1>
+            <p class="editor__descrition">Aenean cursus imperdiet nisl id 
+                fermentum. Aliquam pharetra dui laoreet vulputate dignissim. 
+                Sed id metus id quam auctor molestie eget ut augue.
+            </p>
+        </div>    
 
-<section class='revo-edit'>
-    <!--todo-->
-</section>
+    </section>
 
 <!--Solution-->
 
