edited property transition in .scss

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
         <form action="mailto:zinovijoprisko@gmail.com" enctype="text/plain" class="callback__block-form">
             <div class="callback__form">
                 <input type="text" placeholder="Your name" required class="callback__form-name">
-                <input type="number" placeholder="Phone" required class="callback__form-phone">
+                <input type="text" placeholder="Phone" required class="callback__form-phone">
             </div>
             <button class="callback__form-btn" type="submit">
                 subscribe
